# Grundlagen-Programmierung_Rust

./: .gitignore  README.md
01_Einfuehrung_OOP/01_User_SR/: Cargo.toml  README.md
01_Einfuehrung_OOP/01_User_SR/src/: main.rs  user.rs
02_Vertiefung_OOP/01_BeziehungZwischenKlassen/Schiffer_Versenken_SR/: Cargo.toml
02_Vertiefung_OOP/01_BeziehungZwischenKlassen/Schiffer_Versenken_SR/src/: logic.rs  main.rs
04_02_Strukturierung_Programmcode/SR_02_Hotellzimmerverwaltung/: README.md
04_02_Strukturierung_Programmcode/SR_02_Hotellzimmerverwaltung/src/: structure.rs
04_Vererbung/02_Strukturierung_Programmcode/SR_02_Hotellzimmerverwaltung/: Cargo.toml
04_Vertiefung_Objektorientierung/02_Raumverwaltung/: Cargo.toml
04_Vertiefung_Objektorientierung/02_Raumverwaltung/src/: main.rs
04_Vertiefung_Objektorientierung/02_Raumverwaltung/src/rooms/: default.rs
04_Vertiefung_Objektorientierung/02_Strukturierung_Programmcode/SR_02_Hotellzimmerverwaltung/src/: cli.yaml  main.rs
04_Vertiefung_Objektorientierung/03_04_DiamondProblem/: Cargo.toml
04_Vertiefung_Objektorientierung/03_04_DiamondProblem/src/: fahrzeuge.rs  main.rs
